# ga_lib

./: .gitignore  CMakeLists.txt  GeneticAlgorithm.hpp  TPool.h  TSP_GA.cpp  TSP_GA_parallel.cpp  TreadSafeQ.h  algorithm_sample.py  classic_result.csv  compile.sh  gen_result.csv  graph.csv  held-carp.cpp  held-carp_parallel.cpp  random_graph.py  readme.md  results.json  runner.ipynb  test_lib.cpp  testing.ipynb  testing.py  timer.h
additional/: TSP_GA.cpp  TSP_GA_parallel.cpp  held-carp.cpp
data/: graph.csv  temp_graph.csv
examples/: KnapsackPopulation.cpp  SalesmanPopulation.cpp  knapsack_ga.cpp  main.cpp  main_graphs_yura.cpp  sizeThreadsComparison.cpp
include/: KnapsackPopulation.h  Population.h  SalesmanPopulation.h  Solver.h  TPool.h  TreadSafeQ.h  genSolver.h
python/: algorithm_sample.py  random_graph.py  runner.ipynb  runner.py  testing.ipynb  tests.ipynb
src/: GeneticAlgorithm.cpp  KnapsackPopulation.cpp  Population.cpp  SalesmanPopulation.cpp  Solver.cpp  TPool.cpp  genSolver.cpp  held-carp.cpp  main.cpp
